kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modresorts-service
  namespace: modresorts
  labels:
    app: modresorts
spec:
  type: ClusterIP
  selector:
    app: modresorts
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
